# mcp-runtime

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  release-please-config.json  skills-lock.json
.agents/skills/temporal-developer/references/dotnet/: patterns.md
.claude/skills/: aws-sdk-python-usage
.github/workflows/: ci.yml  release-please.yml
docs/: authentication.md  design.md  releasing.md  techstack.md
scripts/: validate_distribution.py
src/mcp_runtime/: __init__.py  auth.py  config.py  jobs.py  observability.py  server.py  settings.py  storage.py  testing.py  workflow.py
src/mcp_runtime/auth/: __init__.py  policy.py  principal.py  verifier.py
src/mcp_runtime/testing/: __init__.py  _asgi.py  _client.py  _credentials.py
tests/: __init__.py  test_observability.py  test_public_api.py
tests/integration/: test_authentication.py  test_testing.py
tests/support/: __init__.py  asgi.py  jwt.py
tests/unit/: test_public_api.py  test_server.py  test_settings.py
tests/unit/auth/: test_policy.py  test_principal.py  test_verifier.py
tests/unit/testing/: test_client.py  test_credentials.py
