[project]
name = "mcp-runtime"
version = "0.1.0"
description = "Shared runtime foundation for XDenovo internal MCP services."
readme = "README.md"
authors = [
    { name = "ukeSJTU", email = "uke_sjtu@sjtu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp[apps]>=3.4.4,<4",
    "httpx>=0.28.1,<1",
    "temporalio[opentelemetry]>=1.30.0,<2",
    "boto3>=1.43.53,<2",
    "sqlalchemy[asyncio]>=2.0.51,<3",
    "psycopg>=3.3.4,<4",
    "pydantic-settings>=2.14.2,<3",
    "structlog>=26.1.0,<27",
    "opentelemetry-api>=1.44.0,<2",
    "opentelemetry-sdk>=1.44.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.44.0,<2",
    "opentelemetry-instrumentation-httpx>=0.65b0,<0.66",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0,<0.66",
    "opentelemetry-instrumentation-botocore>=0.65b0,<0.66",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.3.4,<4",
    "prek>=0.4.10",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
