[project]
name = "mcp-runtime"
version = "0.1.0"
description = "Shared runtime foundation for XDenovo internal MCP services."
readme = "README.md"
authors = [
    { name = "ukeSJTU", email = "uke_sjtu@sjtu.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp[apps]>=3.4.4,<4",
    "httpx>=0.28.1,<1",
    "temporalio[opentelemetry]>=1.30.0,<2",
    "boto3>=1.43.53,<2",
    "sqlalchemy[asyncio]>=2.0.51,<3",
    "psycopg>=3.3.4,<4",
    "pydantic-settings>=2.14.2,<3",
    "structlog>=26.1.0,<27",
    "opentelemetry-api>=1.44.0,<2",
    "opentelemetry-sdk>=1.44.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.44.0,<2",
    "opentelemetry-instrumentation-httpx>=0.65b0,<0.66",
    "opentelemetry-instrumentation-sqlalchemy>=0.65b0,<0.66",
    "opentelemetry-instrumentation-botocore>=0.65b0,<0.66",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "psycopg[binary]>=3.3.4,<4",
    "prek>=0.4.10",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0,<8",
    "ruff>=0.15.22",
    "ty>=0.0.61",
    "pyjwt>=2.13.0,<3",
    "cryptography>=49.0.0,<50",
]

[tool.pytest]
minversion = "9.1"
addopts = ["-ra", "--import-mode=importlib"]
testpaths = ["tests"]
required_plugins = ["pytest-asyncio>=1.4.0", "pytest-cov>=7.1.0"]
strict = true
filterwarnings = ["error"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["mcp_runtime"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.13"
root = ["./src", "./"]

[tool.ty.src]
include = ["src", "tests"]
